@@ -1,2 +1,2 @@
-#Quisk version 4.2.35
+#Quisk version 4.2.36
 from .quisk import main
