@@ -1469,7 +1469,10 @@ show the devices being used. Change the Fldigi playback to QuiskDigitalInput, an
 Monitor of QuiskDigitalOutput.  Then everything should work.  You do not need to use pavucontrol again because PulseAudio will
 remember the settings.
 <br>
-
+<br>
+Michael, DK1MI/N1BSD, has written a nice description of how to set up Fldigi. It is available
+at his site <a href="https://dk1mi.radio/quisk-fldigi/">https://dk1mi.radio/quisk-fldigi/</a>.
+<br>
 <br>
 If your digital program only uses Alsa devices or you don't want to use PulseAudio,
 you can use the ALSA loopback device.
